# Bigscity-LibCity-master

./: .gitignore  0.py  AI_EDIT_LOG.md  HA_METR_LA_metrics.csv  INFO.md  PEMSD4.npy  README.md  pyproject.toml  readme_zh.md  run_data_prep.py  run_hyper.py  run_model.py  run_resume.py  run_web.py
.aiassistant/rules/: INFO.md
GNNTP/: INFO.md  config_parser.py  pipeline.py
GNNTP/common/: INFO.md  __init__.py  evaluator_utils.py  hyper_tuning.py  registry_evaluator.py  registry_executor.py  traffic_state_evaluator.py  traffic_state_executor.py
GNNTP/data/: __init__.py  dataloader.py  factory.py  registry.py
GNNTP/data/core/: INFO.md  list_dataset.py
GNNTP/data/dataset/: INFO.md  __init__.py  traffic_state_dataset.py  traffic_state_dataset_mixins.py  traffic_state_point_dataset.py
GNNTP/models/: __init__.py  abstract_traffic_state_model.py  locator.py  registry.py
GNNTP/models/traffic_flow_prediction/: INFO.md
GNNTP/models/traffic_speed_prediction/: INFO.md
GNNTP/utils/: __init__.py  argument_list.py  tune.py  utils.py
ai_logs/: AI_LOGS_MAIN.md  index.md
ai_logs/analysis/2026-03/: 2026-03-24_1523_paper-model-selection.md  2026-03-24_1523_pemsd4-model-scope.md  2026-03-24_1547_new-model-innovation-review.md  2026-03-24_1623_task-hierarchy-and-call-chain.md  2026-03-24_1623_torchtext-abi-root-cause.md  2026-03-24_1700_task-relation-summary.md
ai_logs/analysis/2026-04/: 2026-04-20_1614_project-structure-audit.md
ai_logs/change/2026-03/: 2026-03-24_1523_remove-torchtext-field.md  2026-03-26_1223_engineering-context-recovery.md
ai_logs/change/2026-04/: 2026-04-20_1455_refactor-model-layout.md  2026-04-20_1625_default-model-and-doc-sync.md
libcity/: INFO.md  config_parser.py  pipeline.py
libcity/common/: INFO.md  __init__.py  config_parser.py  evaluator_utils.py  registry_evaluator.py  registry_executor.py  traffic_state_evaluator.py  traffic_state_executor.py
libcity/config/: config_parser.py  task_config.json
libcity/core/: __init__.py  factory.py  registry.py
libcity/data/: INFO.md  __init__.py  dataloader.py  factory.py  registry.py  utils.py
libcity/evaluator/: __init__.py  registry.py  road_representation_evaluator.py  utils.py
libcity/executor/: STSSL_executor.py  __init__.py  abstract_tradition_executor.py  chebconv_executor.py  dcrnn_executor.py  gensim_executor.py  geosan_executor.py  hyper_tuning.py  map_matching_executor.py  mtgnn_executor.py  pdformer_executor.py  registry.py  testam_executor.py  timemixer_executor.py  traffic_state_executor.py  traj_loc_pred_executor.py
libcity/model/: loss.py  registry.py
libcity/models/: INFO.md  __init__.py  abstract_traffic_state_model.py  locator.py  registry.py
libcity/pipeline/: pipeline.py
libcity/tasks/: config_parser.py  loss.py  registry.py  utils.py
libcity/utils/: INFO.md  __init__.py  dtw.py  utils.py
scripts/: INFO.md  add_model.py  check_deps.py  check_imports.py  check_registries.py  check_registry.py  clear_cache.py  inspect_config.py  inspect_dataset.py  list_registry.py  print_registry.py  rebuild_dtw_cache.py  run_smoke_custom.py  smoke_test.py  smoke_test_libcity_new.py  test_model.py  test_smoke.py
scripts/experiments/: INFO.md  train_new_diffusion.py  train_new_diffusion_2.py
scripts/run/: INFO.md  hyper_example.txt  run_data_prep.py  run_hyper.py  run_model.py  run_resume.py
scripts/tools/: INFO.md  clear_cache.py  inspect_config.py  inspect_dataset.py  rebuild_dtw_cache.py  smoke_test.py
scripts/web/: pyecharts_views.py  train_web_flask.py
test/: INFO.md  baseline_utils.py  readme.md  test_ARIMA.py  test_HA.py  test_SVR.py  test_VAR.py  test_model_api.py  test_smoke.py
web/: INFO.md  __init__.py  train_web_fastapi.py  train_web_flask.py
web/static/: main.js  train_web_fastapi_dark.css
web/templates/: train_web_fastapi.html
(+178 files in other folders)
