[project]
name = "GNN-TFP"
version = "0.2.0"
description = "Graph Neural Network-based Traffic Flow Prediction"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "dtaidistance>=2.4.0",
    "einops>=0.8.2",
    "flask>=3.1.3",
    "geopy>=2.4.1",
    "infomap>=2.9.2",
    "numpy>=2.4.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "pyecharts>=2.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.3",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "torchdiffeq>=0.2.3",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.3",
    "tslearn>=0.8.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
